--- a/kadai_005/html/index.html
+++ b/kadai_005/html/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>私の趣味</title>
-      <meta charset="utf-8">
+    <title>5章課題</title>
+      <meta name="description"cotent="このページは5章の課題です"
+    <meta charset="utf-8">
   </head>
 <body>
   <header>
